--- a/IBDesignable/IBDesignable/Base.lproj/Main.storyboard
+++ b/IBDesignable/IBDesignable/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,73 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="IBDesignable" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OsW-Uk-PEb">
+                                <rect key="frame" x="30" y="178.5" width="315" height="250"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bdx-uO-lkw">
+                                        <rect key="frame" x="20" y="140" width="275" height="40"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZMo-yv-Fn0" customClass="CustomTextField" customModule="IBDesignable" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="20" width="275" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="JbY-K0-m7T"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="foB-ah-xll">
+                                        <rect key="frame" x="20" y="80" width="275" height="40"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Asq-iy-AYe">
+                                        <rect key="frame" x="20" y="200" width="275" height="40"/>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="Bdx-uO-lkw" firstAttribute="leading" secondItem="foB-ah-xll" secondAttribute="leading" id="2oA-Ub-Phy"/>
+                                    <constraint firstItem="Asq-iy-AYe" firstAttribute="leading" secondItem="Bdx-uO-lkw" secondAttribute="leading" id="C3s-nQ-DyJ"/>
+                                    <constraint firstItem="ZMo-yv-Fn0" firstAttribute="leading" secondItem="OsW-Uk-PEb" secondAttribute="leading" constant="20" id="COc-J4-yAn"/>
+                                    <constraint firstItem="Bdx-uO-lkw" firstAttribute="top" secondItem="foB-ah-xll" secondAttribute="bottom" constant="20" id="JzW-mr-cX6"/>
+                                    <constraint firstItem="foB-ah-xll" firstAttribute="trailing" secondItem="ZMo-yv-Fn0" secondAttribute="trailing" id="LSM-HT-A6y"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZMo-yv-Fn0" secondAttribute="trailing" constant="20" id="SbX-ZZ-7t0"/>
+                                    <constraint firstItem="Asq-iy-AYe" firstAttribute="top" secondItem="Bdx-uO-lkw" secondAttribute="bottom" constant="20" id="cTX-G2-0om"/>
+                                    <constraint firstItem="Asq-iy-AYe" firstAttribute="height" secondItem="Bdx-uO-lkw" secondAttribute="height" id="gtP-dQ-nDV"/>
+                                    <constraint firstItem="foB-ah-xll" firstAttribute="height" secondItem="ZMo-yv-Fn0" secondAttribute="height" id="ijm-wr-EkX"/>
+                                    <constraint firstItem="foB-ah-xll" firstAttribute="leading" secondItem="ZMo-yv-Fn0" secondAttribute="leading" id="q4e-Fa-ILe"/>
+                                    <constraint firstItem="foB-ah-xll" firstAttribute="top" secondItem="ZMo-yv-Fn0" secondAttribute="bottom" constant="20" id="rY4-6I-WiN"/>
+                                    <constraint firstItem="ZMo-yv-Fn0" firstAttribute="top" secondItem="OsW-Uk-PEb" secondAttribute="top" constant="20" id="sFg-vx-O6j"/>
+                                    <constraint firstAttribute="height" constant="250" id="tVA-Uv-s2B"/>
+                                    <constraint firstItem="Asq-iy-AYe" firstAttribute="trailing" secondItem="Bdx-uO-lkw" secondAttribute="trailing" id="wUB-aL-oz9"/>
+                                    <constraint firstItem="Bdx-uO-lkw" firstAttribute="trailing" secondItem="foB-ah-xll" secondAttribute="trailing" id="xPi-Lk-47Y"/>
+                                    <constraint firstItem="Bdx-uO-lkw" firstAttribute="height" secondItem="foB-ah-xll" secondAttribute="height" id="yje-2F-YLR"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OsW-Uk-PEb" secondAttribute="trailing" constant="30" id="3u2-9R-qkV"/>
+                            <constraint firstItem="OsW-Uk-PEb" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-30" id="eRI-Do-wdw"/>
+                            <constraint firstItem="OsW-Uk-PEb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="sLk-8D-XMH"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
